[CRNT-37647]: Fixed HTML5 All Worklist: Record summary layout/spacing issue Bug: CRNT-37647 Signed-off-by: Abhay Thappan <abhay.thappan@sungard.com>

--- a/html5-admin-portal/src/main/resources/META-INF/webapp/styles/html5-admin-portal.css
+++ b/html5-admin-portal/src/main/resources/META-INF/webapp/styles/html5-admin-portal.css
@@ -53,8 +53,12 @@
 
 .permission-tree ul {
 	margin: 0 0 0 0;	
-} }
-
-.overview-report-field-value {
-	padding-right: 10px;
 }
+
+.overview-report-field-value{
+    font-family: Lato, Arial, Helvetica, sans-serif;
+    color: #708090;
+    margin-left: -5px;
+    margin-right: 10px;
+}
+
